Project building fixed.